# transcriptformatter

./: README.md  formatTranscript.py  pyproject.toml
src/transcriptformatter/: formatTranscript.py
src/transcriptformatter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
